# gpuwatch

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: release.yml
data/: gpu_specs.db
scraper/: build_db.py  scrape_specs.py
src/: gpu_database.cpp  gpu_database.h  gpu_specs.h  main.cpp  nvml_monitor.cpp  nvml_monitor.h  tui.cpp  tui.h
